--- a/mySmartHolyBasil/package.json
+++ b/mySmartHolyBasil/package.json
@@ -10,12 +10,17 @@
     "name": "vasudev007"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "ip": "^1.1.5",
     "morgan": "^1.7.0",
+    "mqtt": "^2.7.2",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "uuid": "^3.0.1",
+    "winston": "^2.3.1"
   }
 }
