--- a/mySmartHolyBasil/package.json
+++ b/mySmartHolyBasil/package.json
@@ -16,6 +16,8 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "ip": "^1.1.5",
+    "mongo": "^0.1.0",
+    "mongodb": "^2.2.26",
     "morgan": "^1.7.0",
     "mqtt": "^2.7.2",
     "pug": "^2.0.0-beta6",
