--- a/mySmartHolyBasil/package.json
+++ b/mySmartHolyBasil/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
+    "events": "^1.1.1",
     "express": "^4.14.0",
     "ip": "^1.1.5",
     "mongo": "^0.1.0",
