--- a/mySmartHolyBasil/package.json
+++ b/mySmartHolyBasil/package.json
@@ -21,8 +21,10 @@
     "mongodb": "^2.2.26",
     "morgan": "^1.7.0",
     "mqtt": "^2.7.2",
+    "nodemailer": "^4.0.1",
     "pug": "^2.0.0-beta6",
     "serve-favicon": "^2.3.0",
+    "twilio": "^3.0.0",
     "uuid": "^3.0.1",
     "winston": "^2.3.1"
   }
